# infa_proj_2023

./: Adres.cpp  Adres.h  CMakeLists.txt  Czytelnik.cpp  Czytelnik.h  README.md  RejestrCzytelnikow.cpp  RejestrCzytelnikow.h  bazadanychuzytkownika.cpp  bazadanychuzytkownika.h  gui.cpp  gui.h  katalog.cpp  katalog.h  ksiazka.cpp  ksiazka.h  main.cpp  mainrej.cpp  uzytkownik.cpp  uzytkownik.h  wypozyczanie.cpp  wypozyczanie.h
Wersja 2/: Wersja 2.cbp  Wersja 2.depend  Wersja 2.layout  czytelnicy.txt  ksiazki.txt
biblioteki/gtkmm-3.0/include/: gtkmmconfig.h
biblioteki/pkgconfig/: atk.pc  cairomm-1.0.pc  cairomm-win32-1.0.pc  cairomm-win32-font-1.0.pc  gail-3.0.pc  gdk-win32-3.0.pc  gdkmm-3.0.pc  giomm-2.4.pc  glibmm-2.4.pc  gtk+-broadway-3.0.pc  gtkmm-3.0.pc  pangomm-1.4.pc  sigc++-2.0.pc
